Adiciona documentação para a rota de login do usuário (/usuarios/login)
