# src/swagger.yaml
@@ -423,8 +423,6 @@ paths:
                 email:
                   type: string
                   example: "carlos@example.com"
-      security:
-      - bearerAuth: []
       responses:
         '200':
           description: Código foi enviado para o email informado
@@ -500,8 +498,6 @@ paths:
                 recoveryCode:
                   type: string
                   example: "3oPs99"
-      security:
-      - bearerAuth: []
       responses:
         '200':
           description: A senha do usuário foi devidamente atualizada
@@ -574,6 +570,88 @@ paths:
                   summary: "Erro interno durante a validação do código"
                   value:
                     message: "Erro ao validar o código de recuperação" 
+
+  /usuarios/login:
+    post:
+      summary: "Realizar login do usuário"
+      tags:
+      - "Usuários"
+      description: Esta rota permite que o usuário envie seus dados de login para entrar na plataforma
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  example: "carlos@example.com"
+                passwordProvided:
+                  type: string
+                  example: "p3@Paulowww"
+      responses:
+        '200':
+          description: A senha do usuário foi devidamente atualizada
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                    example: 
+                  message:
+                    type: string
+                    example: "Login bem-sucedido"
+        '400':
+          description: Erro de validação ou entrada inválida.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                invalid_email:
+                  summary: "Email fornecido não tem formato valido"
+                  value:
+                    message: "Email deve ser um email válido"
+                invalid_type_email:
+                  summary: "Email fornecido com um tipo invalido"
+                  value:
+                    message: "Email deve ser uma string"
+        '401':
+          description: Credenciais não condizem com as armazenadas.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                invalid_credentials:
+                  summary: "Credenciais inválidas"
+                  value:
+                    message: "Credenciais inválidas"
+        '404':
+          description: Usuário não encontrado.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                user_not_found:
+                  summary: "Usuário não encontrado"
+                  value:
+                    message: "Nenhum usuário encontrado com este email"
+        '500':
+          description: Erro interno do servidor.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                error_login:
+                  summary: "Erro interno ao realizar o login do usuário"
+                  value:
+                    message: "Erro ao realizar login"
 
   /eventos:
     get:
